[package]
name = "rust-ssh-connect"
version = "0.1.0"
edition = "2021"
authors = ["<taky@taky.com>"]
description = "A tool to attempt SSH connections with various configurations"

[dependencies]
ssh2 = "0.9"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0"
whoami = "1.2"
clap = { version = "3.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
